--- a/MioSito/wwwroot/css/site.css
+++ b/MioSito/wwwroot/css/site.css
@@ -91,3 +91,23 @@ body {
 
 
 */
+.sfondoFooter {
+    background-color: #33ccff;
+}
+
+.contenitore{
+    background-color:aqua;
+    border:1px dashed blue;
+    position:relative;
+    width:100%; height:400px;
+    margin-top:100px;
+}
+.insert{
+    position:absolute;
+    border:1px dashed black;
+    background-color:red;
+    right:0;
+}
+.insert input {       
+    float:right;
+}
