--- a/MioSito/Views/Shared/_Layout.cshtml
+++ b/MioSito/Views/Shared/_Layout.cshtml
@@ -25,7 +25,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contatti" asp-action="Index">Contatti</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contatti" asp-action="Report">Rusultati</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contatti" asp-action="Report">Registrati</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contatti" asp-action="PassaggioDati">Dati</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cookies" asp-action="Index">cookies</a>
                         </li>
                     </ul>
                 </div>
