--- a/MioSito/Views/Shared/_LayoutContatti.cshtml
+++ b/MioSito/Views/Shared/_LayoutContatti.cshtml
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Contatti" asp-action="Index">Contatti</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Contatti" asp-action="Report">Registrati</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-md-0">
                     <input class="form-control" type="text" placeholder="Search">
