Tolto commento su for dell'index del catalogo e pulito il codice

--- a/MioSito/Views/Catalogo/Index.cshtml
+++ b/MioSito/Views/Catalogo/Index.cshtml
@@ -4,7 +4,7 @@
 
 @model List<Catalogo>
 @*@model Catalogo*@
-@*@model System.Collections.Generic.List[MioSito.Models.c]*@
+
 <h2>Catalogo corsi</h2>
 
 <div class="row md-3">
@@ -13,8 +13,8 @@
     <div class="col-md-3"><b>Prezzo</b></div>
     <div class="col-md-3"><b>Dettagli</b></div>
 </div>
-@*@for (int c = 0; c <= 10; c++)
-{*@
+@for (int i = 0; i <= 10; i++)
+{
     <form asp-controller="Catalogo" asp-action="Dettagli" method="get">
        @foreach(Catalogo x in Model)
         {
@@ -28,4 +28,4 @@
         </div>
         }
     </form>
-@*}*@
+}
