--- a/MioSito/Views/Catalogo/Index.cshtml
+++ b/MioSito/Views/Catalogo/Index.cshtml
@@ -3,7 +3,8 @@
 *@
 
 @model List<Catalogo>
-@*@model Catalogo*@
+
+    @*Perchè visualizzo una lista*@ 
 
 <h2>Catalogo corsi</h2>
 
@@ -23,7 +24,7 @@
             <div class="col-md-2">@x.Immagine</div>
             <div class="col-md-4">@x.Prodotto</div>
             <div class="col-md-3">@x.Prezzo</div>
-            <div class="col-md-3"><button type="submit">Dettagli</button></div>
+            <div class="col-md-3"><button type="submit" @*id="@x.Dettaglio"*@>@x.Dettaglio</button></div>
 
         </div>
         }
