Sistemato Catalogo, ma non dettaglio

--- a/MioSito/Views/Catalogo/Dettagli.cshtml
+++ b/MioSito/Views/Catalogo/Dettagli.cshtml
@@ -1,9 +1,8 @@
-﻿
-@*
+﻿@*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model Catalogo
-
+@using MioSito.Models.ViewModels
+@model CatalogoViewModel
 <div>
     dettagli prodotto : @*@Model.Prodotto
     immagine: @Model.Immagine
