--- a/MioSito/wwwroot/css/site.css
+++ b/MioSito/wwwroot/css/site.css
@@ -111,3 +111,24 @@ body {
 .insert input {       
     float:right;
 }
+
+/*.divMax{
+    width:100%;
+}
+.divImg {
+    max-width:100%;
+}
+div{
+    border:2px dashed red; 
+}*/
+
+@media screen and (max-width: 400px) {
+    .immagine {
+        border:1px solid blue;
+        width:50px; height:100px;
+    }
+}
+
+.immagine {
+    max-width: 100%; height: auto;
+}
