--- a/MioSito/Views/Catalogo/Dettagli.cshtml
+++ b/MioSito/Views/Catalogo/Dettagli.cshtml
@@ -4,7 +4,8 @@
 @using MioSito.Models.ViewModels
 @model CatalogoViewModel
 <div>
-    dettagli prodotto : @*@Model.Prodotto
-    immagine: @Model.Immagine
-    prezzo: € @Model.Prezzo*@
+    dettagli id :@Model.Id<br />
+    dettagli prodotto :@Model.Title<br />
+    immagine: <img src="@Model.ImagePath" /><br />
+    prezzo: € @Model.FullPrice
 </div>
