--- a/MioSito/Views/Catalogo/Index.cshtml
+++ b/MioSito/Views/Catalogo/Index.cshtml
@@ -9,25 +9,29 @@
 
 <h2>Catalogo corsi</h2>
 
-<div class="row md-3">
+<div class="row md-3 titleBar">
     <div class="col-md-2"><b>Immagini</b></div>
     <div class="col-md-4"><b>Prodotti</b></div>
     <div class="col-md-3"><b>Prezzo</b></div>
     <div class="col-md-3"><b>Dettagli</b></div>
 </div>
-@for (int i = 0; i <= 10; i++)
+@*@for (int i = 0; i <= 10; i++)
 {
-    <form asp-controller="Catalogo" asp-action="Dettagli" method="get">
-       @foreach(CatalogoViewModel x in Model)
-        {
+<form asp-controller="Catalogo" asp-action="Dettagli" method="get">
+    *@
+    @foreach (CatalogoViewModel x in Model)
+    {
 
         <div class="row md-3 divMax">
-            <div class="col-md-2 divImg"><img src="@x.ImagePath" class="immagine"/> </div>
+            <div class="col-md-2 divImg" @*style="background-image:url(@x.ImagePath)"*@><img src="@x.ImagePath" class="immagine" /> </div>
             <div class="col-md-4">@x.Title</div>
-            <div class="col-md-3">@x.Price</div>
-            <div class="col-md-3"><button type="submit" id="@x.Id">Dettaglio</button></div>
-
+            <div class="col-md-3">
+                <div>@x.FullPrice</div><br />
+                <div>@x.CurrentPrice</div>
+            </div>
+            <div class="col-md-3"><a asp-controller="Catalogo" asp-action="Dettagli" asp-route-id="@x.Id" class="btn btn-outline-primary">Dettagli</a></div>
+            @*<button type="submit" id="@x.Id" onclick="SendDettaglio">Dettaglio</button>*@
         </div>
-        }
-    </form>
-}
+    }
+    @*</form>
+        }*@
