--- a/MioSito/wwwroot/css/site.css
+++ b/MioSito/wwwroot/css/site.css
@@ -117,15 +117,18 @@ body {
 }
 .divImg {
     max-width:100%;
-}
+}*/
 div{
     border:2px dashed red; 
-}*/
+}
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 300px) {
     .immagine {
         border:1px solid blue;
         width:50px; height:100px;
+    }
+    div.titleBar{
+        display:none !important;
     }
 }
 
