--- a/MioSito/Views/Shared/_Layout.cshtml
+++ b/MioSito/Views/Shared/_Layout.cshtml
@@ -36,12 +36,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cookies" asp-action="Index">cookies</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalogo" asp-action="InsertCourse">Aggiungi</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <div class="container">
+        <div id="alertDiv"></div>
+
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -53,8 +58,45 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+
+    <script>
+
+
+
+        //Function per popup messaggio successo o errore nell'invio
+$(function () {
+
+@if (!string.IsNullOrWhiteSpace(ViewBag.PopupMessage) && ViewBag.PopupMessage == "request_saved")
+        {
+@: $("#alertDiv").append('<div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert"><strong>Fatto!</strong> well done</div>');
+
+@: $("#success-alert").fadeTo(5000, 500).slideUp(500, function () {
+@:   $("#success-alert").slideUp(500);
+@: });
+    }
+
+
+
+
+
+@if (!string.IsNullOrWhiteSpace(ViewBag.PopupMessage) && ViewBag.PopupMessage == "request_failed")
+        {
+@: $("#alertDiv").append('<div id="fail-alert" class="alert alert-danger alert-dismissible fade show" role="alert"><strong>Attention!</strong></div>');
+
+@: $("#fail-alert").fadeTo(5000, 500).slideUp(500, function(){
+@:   $("#fail-alert").slideUp(500);
+@: });
+    }
+});
+
+
+
+
+    </script>
 </body>
 </html>
