--- a/MioSito/Views/Shared/_Layout.cshtml
+++ b/MioSito/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@ $(function () {
 
 @if (!string.IsNullOrWhiteSpace(ViewBag.PopupMessage) && ViewBag.PopupMessage == "request_saved")
         {
-@: $("#alertDiv").append('<div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert"><strong>Fatto!</strong> well done</div>');
+@: $("#alertDiv").append('<div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert"><strong>Successful insert!</strong> well done</div>');
 
 @: $("#success-alert").fadeTo(5000, 500).slideUp(500, function () {
 @:   $("#success-alert").slideUp(500);
