--- a/MioSito/Views/Shared/_Layout.cshtml
+++ b/MioSito/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalogo" asp-action="InsertCourse">Aggiungi</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Podotti</a>
+                        </li>
                     </ul>
                 </div>
             </div>
